--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,15 @@
 version: 0.0
 os: linux
+
 files:
   - source: /
     destination: /home/ec2-user/app
+
 hooks:
   AfterInstall:
     - location: scripts/install.sh
+      runas: ec2-user
+
   ApplicationStart:
     - location: scripts/start.sh
+      runas: ec2-user
