--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,14 +5,20 @@ phases:
     runtime-versions:
       nodejs: 18
 
+  pre_build:
+    commands:
+      - echo "Listing source files"
+      - ls -la
+
   build:
     commands:
-      - echo "Build started"
-
-  post_build:
-    commands:
-      - echo "Build completed"
+      - echo "Build phase"
 
 artifacts:
   files:
-    - '**/*'
+    - appspec.yml
+    - server.js
+    - package.json
+    - package-lock.json
+    - scripts/**/*
+    - lambda/**/*
