Update buildspec.yml for Node.js 18 and build commands

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,14 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
+    runtime-versions:
+      nodejs: 18
+  build:
     commands:
-      - echo "PWD"
-      - pwd
-      - echo "FILES"
+      - echo "Build started"
       - ls -la
-
+      - zip -r artifact.zip .
 artifacts:
   files:
-    - '**/*'
+    - artifact.zip
