Add timeout to AfterInstall and ApplicationStart hooks
Updated hooks in appspec.yml to include timeout values.

--- a/appspec.yml
+++ b/appspec.yml
@@ -8,8 +8,7 @@ files:
 hooks:
   AfterInstall:
     - location: scripts/install.sh
-      runas: ec2-user
-
+      timeout: 300
   ApplicationStart:
     - location: scripts/start.sh
-      runas: ec2-user
+      timeout: 300
