--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,15 @@
 version: 0.0
 os: linux
+
 files:
   - source: /
     destination: /home/ec2-user/app
 
 hooks:
+  ApplicationStop:
+    - location: scripts/stop.sh
+      timeout: 300
+
   AfterInstall:
     - location: scripts/install.sh
       timeout: 300
